- Transfer progress bar in "File Transfer" dialog can now get focus
- Ability to hide some elements of main window
- Locale file size now also use in "file transfer" dialog
- Unic dialog to enter username and password on login error and channel share
- Ability to show password on login error, channel password, channel operator password, and channel share
- Reset label of files list when disconnected from server
- Limit text size in channels tree ignored for screen readers
- Fixed state of checkable items in "Preferences", "User Account", "Server properties" dialogs not announce by Voice Over on MacOS
- Windows and macOS updated to Qt v6.8.0-beta1
- Ability to reorder column of User Accounts and Online Users dialog
Android Client
- Toggle channel operator does not show password dialog if user has user-right to change channel operator
iOS Client
-
Server
-

Version 5.16.1, 2024/04/16
Default Qt Client
- Fixed issue where initial sound event was played over and over again

Version 5.16, 2024/04/08
Default Qt Client
- Dates and times are now formatted in user locale on "User accounts" dialog and main window's files tab
- Option to show server's message of the day in a welcome dialog box
- Option to announce server name on some server related TTS events
- Option to show channel topic in channel list
- Don't display server name when disconnected from server where not authentified
- Ask for accessibility settings on Linux at first startup
- Fixed "Gender" property not being saved in .tt files
- Fixed sort by size on file list
- OPUS codec updated to v1.5.1
- Windows and macOS updated to Qt 6.7.0
Android Client
- Admins can upload files to channels they have not joined
- It is now possible to move users to root channel
- Navigating back returns to Channels-tab prior to disconnecting
- Navigating back also displays root channel
- User menu action to grant/revoke channel operator
- Subscriptions for intercepting users
- OPUS codec updated to v1.5.1