@@ -169,6 +169,50 @@
            </widget>
           </item>
           <item row="0" column="2">
+           <widget class="QLabel" name="streamMediaVolumeLabel">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="toolTip">
+             <string>Media file volume</string>
+            </property>
+            <property name="text">
+             <string/>
+            </property>
+            <property name="pixmap">
+             <pixmap resource="resources.qrc">:/images/images/speaker.png</pixmap>
+            </property>
+            <property name="buddy">
+             <cstring>streamMediaVolumeSlider</cstring>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="3">
+           <widget class="QSlider" name="streamMediaVolumeSlider">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="toolTip">
+             <string>Media file volume</string>
+            </property>
+            <property name="accessibleName">
+             <string>Media file volume</string>
+            </property>
+            <property name="maximum">
+             <number>100</number>
+            </property>
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="0">
            <widget class="QLabel" name="vumeterLabel">
             <property name="toolTip">
              <string>Voice level</string>
@@ -184,7 +228,7 @@
             </property>
            </widget>
           </item>
-          <item row="0" column="3">
+          <item row="1" column="1">
            <widget class="QProgressBar" name="voiceactBar">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Ignored" vsizetype="Preferred">
@@ -215,7 +259,7 @@
             </property>
            </widget>
           </item>
-          <item row="1" column="0">
+          <item row="1" column="2">
            <widget class="QLabel" name="label_2">
             <property name="toolTip">
              <string>Microphone gain</string>
@@ -234,7 +278,7 @@
             </property>
            </widget>
           </item>
-          <item row="1" column="1">
+          <item row="1" column="3">
            <widget class="QSlider" name="micSlider">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
@@ -256,7 +300,7 @@
             </property>
            </widget>
           </item>
-          <item row="1" column="2">
+          <item row="2" column="0">
            <widget class="QLabel" name="voiceactLabel">
             <property name="toolTip">
              <string>Voice activation level</string>
@@ -275,7 +319,7 @@
             </property>
            </widget>
           </item>
-          <item row="1" column="3">
+          <item row="2" column="1">
            <widget class="QSlider" name="voiceactSlider">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
